Fix for questionnaire header on resizing. Fix alignment for audio dropdown on questionnaire

--- a/web/static/css/_ncd.scss
+++ b/web/static/css/_ncd.scss
@@ -404,7 +404,7 @@ i.survey-status {
           padding: 25px 20px;
           span {
             @extend .truncate;
-            width: 85%;
+            width: 83%;
             float: left;
           }
         }
@@ -539,6 +539,7 @@ i.survey-status {
 
 .audio-section {
   position: relative;
+  padding-left: 10px;
   .audio-dropdown {
     display: inline-block;
     width: 25%;
@@ -779,7 +780,9 @@ label {
   .dropfile.audio .drop-text {
     font-size: 78%;
   }
-
+  .collapsible li .card .card-content.closed-step a span {
+    width: 75%;
+  }
 }
 
 @media all and (max-width: 821px) and (min-width: 601px) {
